--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
   "name": "inventario",
   "version": "1.0.0",
-  "description": "Api rest for an inventory application",
+  "description": "Sistema de inventario de aceites",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "keywords": [
-    "node",
-    "js"
-  ],
-  "author": "Rodrigo Bonilla",
-  "license": "ISC",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.0",
-    "bcrypt": "^5.1.0"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.0.1"
   }
 }
