--- a/render.yaml
+++ b/render.yaml
@@ -10,4 +10,8 @@ services:
         value: production
       - key: JWT_SECRET
         generateValue: true
+      - key: SUPABASE_URL
+        sync: false
+      - key: SUPABASE_SERVICE_KEY
+        sync: false
     healthCheckPath: /test
